removed some no longer needed parameters

--- a/Random_walk_pred_strategy.ipynb
+++ b/Random_walk_pred_strategy.ipynb
@@ -38,34 +38,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "480952"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_crossvalidation_5min = (\n",
-    "    pl.scan_csv('crossvalidation_df_LR_5min.csv')\n",
-    "    .select([\n",
-    "        pl.col('cutoff').alias('ds'),\n",
-    "        # pl.col('ds'),\n",
-    "        pl.col('LinearRegression').alias('pred') #.round(5)\n",
-    "    ])\n",
-    ").collect()\n",
-    "len(df_crossvalidation_5min)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -236,10 +208,6 @@
     "lot_size = 1\n",
     "per_lot = 100_000\n",
     "\n",
-    "# pyramid\n",
-    "pyramid_size = 4\n",
-    "pyramid_bool = True\n",
-    "\n",
     "# stop loss\n",
     "stop_loss_size = 0.00033*4\n",
     "# threshold for entry\n",
@@ -253,11 +221,7 @@
     "msolutions_commission = lot_size * -5\n",
     "\n",
     "# starting balance\n",
-    "balance = 200000\n",
-    "\n",
-    "# base currency rate\n",
-    "base_currency_rate = 0.045 # EUR\n",
-    "quote_currency_rate = 0.055 # USD"
+    "balance = 200_000"
    ]
   },
   {
