exported df_joined to make it easier to bring into the optimization model.

--- a/Random_walk_pred_strategy.ipynb
+++ b/Random_walk_pred_strategy.ipynb
@@ -127,6 +127,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_joined.write_csv(\"df_w_news_15min_pred.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -764,28 +773,6 @@
     "\n",
     "    return [exit_time, exit_price, neither_hit]\n",
     "find_exit_price([positions.row(0)[0], positions.row(0)[1], positions.row(0)[4], positions.row(0)[3]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exit_times = []\n",
-    "exit_prices = []\n",
-    "neither_hit_bool = []\n",
-    "for row in positions.iter_rows():\n",
-    "    exit_time, exit_price, neither_hit = find_exit_price([row[0], row[1], row[4], row[3]])\n",
-    "    exit_times.append(exit_time)\n",
-    "    exit_prices.append(exit_price)\n",
-    "    neither_hit_bool.append(neither_hit)\n",
-    "    \n",
-    "positions_with_exit_info = positions.with_columns([\n",
-    "    pl.Series(\"exit_time\", exit_times),\n",
-    "    pl.Series(\"exit_price\", exit_prices),\n",
-    "    pl.Series(\"neither_hit\", neither_hit_bool)\n",
-    "])"
    ]
   },
   {
