--- a/Regression_pred_strategy_5min.ipynb
+++ b/Regression_pred_strategy_5min.ipynb
@@ -167,6 +167,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_joined.write_csv(\"df_w_news_5min_pred.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
