added in neither hit to the find_exit_price function

--- a/Random_walk_pred_strategy.ipynb
+++ b/Random_walk_pred_strategy.ipynb
@@ -750,14 +750,14 @@
     "    ]).filter(\n",
     "        pl.col('take_profit_hit') | pl.col('stop_loss_hit') | pl.col('week_transition_hit') | pl.col('swap_hit')\n",
     "    ).sort('datetime').head(1)\n",
-    "\n",
+    "    neither_hit = False\n",
     "    if len(result) == 0:\n",
-    "        return [None, None]\n",
+    "        return [None, None, neither_hit]\n",
     "\n",
     "    exit_row = result.row(0)\n",
     "    # print(exit_row)\n",
     "    exit_time = exit_row[0]\n",
-    "    neither_hit = False\n",
+    "\n",
     "    if exit_row[-4]: # take_profit_hit\n",
     "        if exit_row[-3]:\n",
     "            exit_price, neither_hit = check_5_min_data(exit_row[0], position_type, take_profit_price, stop_loss_price)\n",
