parentheses around threshold

--- a/Random_walk_pred_strategy.ipynb
+++ b/Random_walk_pred_strategy.ipynb
@@ -343,8 +343,8 @@
     "\n",
     "# create the buy and sell signals which is that if the Pred_lag1 is greater than the y by threshold then buy and if the Pred_lag1 is less than the y by threshold then sell\n",
     "df_joined_bs = df_joined_hourly.with_columns(\n",
-    "    (pl.col(\"pred_lag3\") > pl.col(\"y\") + threshold).cast(pl.Int8).alias(\"buy\"),\n",
-    "    (pl.col(\"pred_lag3\") < pl.col(\"y\") - threshold).cast(pl.Int8).alias(\"sell\"),\n",
+    "    (pl.col(\"pred_lag3\") > (pl.col(\"y\") + threshold)).cast(pl.Int8).alias(\"buy\"),\n",
+    "    (pl.col(\"pred_lag3\") < (pl.col(\"y\") - threshold)).cast(pl.Int8).alias(\"sell\"),\n",
     "    # (pl.col('y') - pl.col('Pred_lag1')).alias(\"y_diff\")\n",
     ")\n",
     "\n",
