--- a/Ensemble_RL_SARIMA.ipynb
+++ b/Ensemble_RL_SARIMA.ipynb
@@ -631,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -661,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -700,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -891,7 +891,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -950,7 +950,7 @@
         "    model.learn(total_timesteps=total_learning_timesteps)#, callback=ProgressBarCallback(100))\n",
         "    # print(env_tr.render()['orders'].columns)\n",
         "\n",
-        "    best_classification_model = binary_classification_orders(env_tr.render()['orders'], slices_1hr[0].min(), slices_1hr[0].max())\n",
+        "    best_classification_model = binary_classification_orders(env_tr.render()['orders'], full_data, slices_1hr[0].min(), slices_1hr[0].max())\n",
         "\n",
         "    reward_over_validations = []\n",
         "    orders_over_validations = []\n",
@@ -1011,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
@@ -1019,11 +1019,7 @@
           "output_type": "stream",
           "text": [
             "--------------------------------------------------------------------------------\n",
-            "entropy: 0.0, learning rate: 0.0003, gamma: 0.99\n",
-            "Index(['Id', 'Symbol', 'Type', 'Volume', 'Entry Time', 'Entry Price',\n",
-            "       'Exit Time', 'Exit Price', 'Exit Balance', 'Exit Equity', 'Profit',\n",
-            "       'Margin', 'Fee', 'Closed'],\n",
-            "      dtype='object')\n"
+            "entropy: 0.0, learning rate: 0.0003, gamma: 0.99\n"
           ]
         }
       ],
