fixed bug with current_time, and quieted optuna

--- a/Ensemble_RL_SARIMA.ipynb
+++ b/Ensemble_RL_SARIMA.ipynb
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -829,7 +829,7 @@
         "\n",
         "    # split the data\n",
         "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
-        "\n",
+        "    optuna.logging.set_verbosity(optuna.logging.WARNING)\n",
         "    # Create an Optuna study object and specify the optimization direction\n",
         "    study = optuna.create_study(direction=\"maximize\")\n",
         "\n",
@@ -908,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -964,7 +964,7 @@
         "        iteration = 1\n",
         "        while not done_val:\n",
         "            action, _states = model.predict(obs_val)\n",
-        "            current_time_step = env_val._current_tick\n",
+        "            current_time_step = env_val.simulator.current_time\n",
         "            classification_x = full_data[full_data.index <= current_time_step].tail(5).mean()\n",
         "            y_pred = best_classification_model.predict(classification_x)\n",
         "            if y_pred == 0:\n",
@@ -1011,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [
         {
@@ -1025,6 +1025,155 @@
       ],
       "source": [
         "train_val_model(PPO, 'MultiInputPolicy', env_train_1hr, env_validation_1hr, 2024, '0', 0.0003, 0.99, 0.0, episodes=1, total_learning_timesteps=10_000)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 89,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Open</th>\n",
+              "      <th>High</th>\n",
+              "      <th>Low</th>\n",
+              "      <th>Close</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Time</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 03:00:00+00:00</th>\n",
+              "      <td>1.11672</td>\n",
+              "      <td>1.11767</td>\n",
+              "      <td>1.11660</td>\n",
+              "      <td>1.11750</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 04:00:00+00:00</th>\n",
+              "      <td>1.11750</td>\n",
+              "      <td>1.11782</td>\n",
+              "      <td>1.11683</td>\n",
+              "      <td>1.11719</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 05:00:00+00:00</th>\n",
+              "      <td>1.11719</td>\n",
+              "      <td>1.11753</td>\n",
+              "      <td>1.11698</td>\n",
+              "      <td>1.11709</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 06:00:00+00:00</th>\n",
+              "      <td>1.11710</td>\n",
+              "      <td>1.11785</td>\n",
+              "      <td>1.11662</td>\n",
+              "      <td>1.11785</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016-08-01 07:00:00+00:00</th>\n",
+              "      <td>1.11784</td>\n",
+              "      <td>1.11814</td>\n",
+              "      <td>1.11752</td>\n",
+              "      <td>1.11794</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024-08-09 19:00:00+00:00</th>\n",
+              "      <td>1.09240</td>\n",
+              "      <td>1.09245</td>\n",
+              "      <td>1.09178</td>\n",
+              "      <td>1.09186</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024-08-09 20:00:00+00:00</th>\n",
+              "      <td>1.09186</td>\n",
+              "      <td>1.09234</td>\n",
+              "      <td>1.09151</td>\n",
+              "      <td>1.09206</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024-08-09 21:00:00+00:00</th>\n",
+              "      <td>1.09207</td>\n",
+              "      <td>1.09217</td>\n",
+              "      <td>1.09170</td>\n",
+              "      <td>1.09195</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024-08-09 22:00:00+00:00</th>\n",
+              "      <td>1.09195</td>\n",
+              "      <td>1.09211</td>\n",
+              "      <td>1.09171</td>\n",
+              "      <td>1.09187</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024-08-09 23:00:00+00:00</th>\n",
+              "      <td>1.09186</td>\n",
+              "      <td>1.09194</td>\n",
+              "      <td>1.09148</td>\n",
+              "      <td>1.09167</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>50086 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                              Open     High      Low    Close\n",
+              "Time                                                         \n",
+              "2016-08-01 03:00:00+00:00  1.11672  1.11767  1.11660  1.11750\n",
+              "2016-08-01 04:00:00+00:00  1.11750  1.11782  1.11683  1.11719\n",
+              "2016-08-01 05:00:00+00:00  1.11719  1.11753  1.11698  1.11709\n",
+              "2016-08-01 06:00:00+00:00  1.11710  1.11785  1.11662  1.11785\n",
+              "2016-08-01 07:00:00+00:00  1.11784  1.11814  1.11752  1.11794\n",
+              "...                            ...      ...      ...      ...\n",
+              "2024-08-09 19:00:00+00:00  1.09240  1.09245  1.09178  1.09186\n",
+              "2024-08-09 20:00:00+00:00  1.09186  1.09234  1.09151  1.09206\n",
+              "2024-08-09 21:00:00+00:00  1.09207  1.09217  1.09170  1.09195\n",
+              "2024-08-09 22:00:00+00:00  1.09195  1.09211  1.09171  1.09187\n",
+              "2024-08-09 23:00:00+00:00  1.09186  1.09194  1.09148  1.09167\n",
+              "\n",
+              "[50086 rows x 4 columns]"
+            ]
+          },
+          "execution_count": 89,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "full_data"
       ]
     },
     {
